src/core/Claroline/CoreBundle/Tests/stub/plugin/extension/Invalid/NonExistentRoutingResource1/InvalidNonExistentRoutingResource1.php
<?php

namespace Invalid\NonExistentRoutingResource1;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class InvalidNonExistentRoutingResource1 extends ClarolineExtension
{
    public function getRoutingResourcesPaths()
    {
        return 'wrong/path/file.yml';
    }
}